# helios-underwriting

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 30df002f6c80_add_historical_policies_for_rag.py  dd8d4ef14dc0_create_initial_schema.py  fa36871be79e_add_endorsements_table.py
scripts/: __init__.py  seed_historical_policies.py  seed_submissions.py  serve_webapp.py
services/: __init__.py
services/policy/: __init__.py  main.py
services/policy/api/: __init__.py  dependencies.py
services/policy/api/v1/: __init__.py  router.py
services/policy/repositories/: __init__.py  endorsement_repository.py  policy_repository.py
services/policy/schemas/: __init__.py  requests.py  responses.py
services/policy/services/: __init__.py  exceptions.py  policy_service.py
services/pricing/: __init__.py  main.py
services/pricing/api/: __init__.py  dependencies.py
services/pricing/api/v1/: __init__.py  router.py
services/pricing/repositories/: __init__.py  quote_repository.py
services/pricing/schemas/: __init__.py  requests.py  responses.py
services/pricing/services/: __init__.py  exceptions.py  pdf_generator.py  pricing_service.py
services/rag/: __init__.py  main.py
services/rag/api/: __init__.py  dependencies.py
services/rag/api/v1/: __init__.py  router.py
services/rag/repositories/: __init__.py  historical_repository.py
services/rag/schemas/: __init__.py
services/rag/services/: __init__.py  embedding_service.py  similarity_service.py
services/risk/: __init__.py  main.py
services/risk/agents/: __init__.py  appetite.py  pricing_agent.py  risk_assessor.py  triage_agent.py
services/risk/api/: __init__.py  dependencies.py
services/risk/api/v1/: __init__.py  router.py
services/risk/repositories/: __init__.py  assessment_repository.py  triage_repository.py
services/risk/schemas/: __init__.py  responses.py
services/risk/services/: __init__.py  exceptions.py  risk_service.py
services/risk/tasks/: __init__.py  underwriting_tasks.py
services/submission/: __init__.py  main.py
services/submission/api/: __init__.py  dependencies.py
services/submission/api/v1/: __init__.py  router.py
services/submission/repositories/: __init__.py  submission_repository.py
services/submission/schemas/: __init__.py  requests.py  responses.py
services/submission/services/: __init__.py  exceptions.py  submission_service.py
shared/: __init__.py
shared/celery/: __init__.py  app.py
shared/config/: __init__.py  settings.py
shared/database/: __init__.py  base.py  models.py  models_endorsement.py  models_historical.py  session.py
shared/domain/: __init__.py  endorsement.py  entities.py  enums.py  policy_state.py  value_objects.py
shared/logging/: __init__.py  setup.py
tests/: conftest.py
tests/integration/policy/: test_policy_api.py
tests/integration/pricing/: test_pricing_api.py
tests/integration/submission/: test_submission_api.py
tests/unit/domain/: test_entities.py  test_value_objects.py
tests/unit/policy/: test_policy_state.py
tests/unit/pricing/: test_pdf_generator.py
tests/unit/rag/: test_similarity.py
tests/unit/risk/: test_pricing_agent.py  test_risk_assessor.py
webapp/: app.js  index.html
