[project]
name = "helios-underwriting"
version = "0.1.0"
description = "Production-grade insurance underwriting platform with AI agents"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Rahul Datta" }]
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.1",
    "cryptography>=43.0.0",
    # AI agents
    "pydantic-ai>=0.0.13",
    "openai>=1.54.0",
    # Async & background tasks
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    # HTTP client
    "httpx>=0.27.0",
    # Logging & observability
    "loguru>=0.7.2",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    # Document processing
    "pypdf>=5.1.0",
    "jinja2>=3.1.4",
    # Utilities
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "ipython>=8.29.0",
    "rich>=13.9.4",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.1",
    "faker>=33.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["services", "shared", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific
    "S",      # bandit security
    "N",      # pep8-naming
    "D",      # pydocstyle
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
]
ignore = [
    "D100",   # missing module docstring
    "D104",   # missing package docstring
    "D203",   # 1 blank line before class docstring (conflicts with D211)
    "D213",   # multi-line docstring summary on second line (conflicts with D212)
    "ANN401", # dynamically typed Any
    "S101",   # asserts (we use them in tests)
    "ANN101",
    "ANN102",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN", "S105", "S106"]

[tool.ruff.lint.extend-per-file-ignores]
"alembic/versions/*.py" = ["E501", "D", "ANN", "I001"]
"alembic/env.py" = ["I001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["alembic.*", "loguru", "pydantic_settings"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "shared.config.settings"
disable_error_code = ["misc"]

# pre-commit's isolated mypy env does not install pydantic-ai; project venv does.
[[tool.mypy.overrides]]
module = ["pydantic_ai", "pydantic_ai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "services.submission",
    "services.submission.*",
    "services.risk",
    "services.risk.*",
    "services.pricing",
    "services.pricing.*",
    "services.policy",
    "services.policy.*",
]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Session-scoped async `engine` in conftest must share one event loop with all tests.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=services",
    "--cov=shared",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=50",
]
markers = [
    "unit: unit tests",
    "integration: integration tests requiring database",
    "slow: slow-running tests",
]

[tool.coverage.run]
branch = true
source = ["services", "shared"]
omit = ["*/tests/*", "*/alembic/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
